fixes search partial to align

--- a/app/assets/stylesheets/statics.scss
+++ b/app/assets/stylesheets/statics.scss
@@ -23,6 +23,13 @@ h1, h2, h3 {
 }
 #search-bar {
 	position: relative;
-	top: 7vh;
+	top: 10vh;
+}
+.searchpartial {
+	position: relative;
+	top: 5vh;
+}
+.search-container {
+	height: 6vh;
 }
 
